   - This provides properly formated data, not a plant model of an IFO
- Improved the diagnostic tool mbuf_probe
   - Allow for simple streaming and limited analysis of some of the shared memory buffers used in the codebase.
- Implemented a standalone_edc.
   - An edcu as a regular program, not a non-rt model.
   - Can record data into multiple types (short, int, float, double)
- Implemented fix for FRX 13791
   - Increase the number of connections allowed on a daqd circular buffer past 32.
   - Generalize the data structure to allow changing the max number easier.  Currently set to 128.
==================================================================================================
Changes for 3.6  (NOT YET RELEASED)
==================================================================================================
- When using daqd_shmem, must set a parameter "GDS_BROADCAST" = "1" to enable gds broadcast.
- daqLibZmq.c developed to send out GDS TP data via separate shared memory area for use with 
  new ZMQ DAQ transmission software.
  - This code is inserted if USE_ZMQ file exists in release/src/include directory. If not, then
    build will default to using mx_stream version (daqLib.c).
- RCG now builds user space code as well as kernel objects.
- controller.c and moduleLoad.c now split into new files to clean out #defs:
	- controllerIop.c and moduleLoadIop.c for IOP model builds.
	- controllerApp.c and moduleLoadApp.c for user application model builds.
	- controllerIopUser.c and controllerAppUser.c, which are user space equivalents.
- Removed /proc entries from all FE code. This should alleviate issue with change to /proc
  in later Linux kernels.
- daqd does not allow non-minute minute trends.
- zmq_rcv_ix_xmit allows a configurable time window in which it will wait for all FE computers to
  send data.
- Bug fix for Fcn, Relational Operator, AND parts: Not removing spaces in arguments.