@@ -25,7 +25,7 @@ FIND_PACKAGE(MX)
 FIND_PACKAGE(OpenMX)
 FIND_PACKAGE(Dolphin)
 FIND_PACKAGE(NDS2Client)
-FIND_PACKAGE(Boost COMPONENTS system filesystem)
+FIND_PACKAGE(Boost COMPONENTS filesystem system)
 FIND_PACKAGE(RapidJSON)
 FIND_PACKAGE(RPC)
 FIND_PACKAGE(libcds-pubsub)
