@@ -51,9 +51,10 @@ target_include_directories(nds PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/framelib/src
     ${CMAKE_CURRENT_SOURCE_DIR}/framelib/src/zlib
     ${CMAKE_CURRENT_SOURCE_DIR}/../include
-    ${Boost_INCLUDEDIR}
+    ${Boost_INCLUDE_DIRS}
 )
 target_link_libraries(nds PRIVATE
+        args
         ldastools::framecpp
         ${Boost_LIBRARIES})
 
