@@ -1,14 +1,34 @@
 #include <stdio.h>
 #include <stdlib.h>
 #include <iostream>
+#include <sstream>
 #include <unistd.h>
 #include "nds.hh"
+#include "args.h"
+
 #include <boost/filesystem.hpp>
 
 using namespace CDS_NDS;
+namespace fs = boost::filesystem;
 
-std::string programname; // Set to the program's executable name during run time
+struct NDSConfigOpts
+{
+    fs::path input_dir{};
+    fs::path log_path{};
+    bool     exit{ false };
 
+    fs::path
+    socket_path( ) const
+    {
+        return input_dir / "daqd_socket";
+    }
+
+    fs::path
+    jobs_dir( ) const
+    {
+        return input_dir / "jobs";
+    };
+};
 //
 // Set log level 2 in the production system
 //
@@ -18,57 +38,94 @@ int nds_log_level = 4; // Controls volume of log messages
 int _debug = 4; // Controls volume of the debugging messages that is printed out
 #endif
 
-// FrameCPP::Dictionary *dict = FrameCPP::library.getCurrentVersionDictionary();
-//
-
-void
-usage( int c )
-{
-    system_log( 1, "nds usage: nds [-l logfilename ] <pipe file name>" );
-    exit( c );
-}
-
-int
+NDSConfigOpts
 parse_args( int argc, char* argv[] )
 {
-    int          c;
-    extern char* optarg;
-    extern int   optind;
+    NDSConfigOpts opts;
 
-    while ( ( c = getopt( argc, argv, "Hhl:" ) ) != -1 )
+    const char* log_dest = nullptr;
+    const char* job_dir = nullptr;
+    const char* default_job_dir = "/var/run/nds";
+
+    auto arg_parser = args_create_parser(
+        "The archive data retrieval service for daqd data" );
+    args_add_string_ptr( arg_parser,
+                         'l',
+                         ARGS_NO_LONG,
+                         "filename",
+                         "Send log information to the given file",
+                         &log_dest,
+                         nullptr );
+    args_add_string_ptr(
+        arg_parser,
+        'd',
+        "socketdir",
+        "path",
+        "Directory that the jobs dir and daqd_socket reside in",
+        &job_dir,
+        default_job_dir );
+    opts.exit = ( args_parse( arg_parser, argc, argv ) < 1 );
+    args_destroy( &arg_parser );
+
+    opts.input_dir = job_dir;
+    opts.log_path = ( log_dest ? log_dest : "" );
+    return opts;
+}
+
+void
+setup_logging( const std::string& programname, const NDSConfigOpts& opts )
+{
+    openlog( programname.c_str( ), LOG_PID | LOG_CONS, LOG_USER );
+    if ( !opts.log_path.empty( ) )
     {
-        FILE* f;
-        switch ( c )
-        {
-        case 'H':
-        case 'h':
-            usage( 0 );
-            break;
-        case 'l':
-            f = freopen( optarg, "w", stdout );
-            setvbuf( stdout, NULL, _IOLBF, 0 );
-            stderr = stdout;
-            break;
-        default:
-            usage( 1 );
-        }
+        FILE* f = freopen( opts.log_path.c_str( ), "w", stdout );
+        setvbuf( stdout, NULL, _IOLBF, 0 );
+        stderr = stdout;
     }
-    return optind;
+}
+
+void
+ensure_jobs_dir( const NDSConfigOpts& opts )
+{
+    namespace fs = boost::filesystem;
+
+    fs::path jobs_dir = opts.jobs_dir( );
+    if ( fs::exists( jobs_dir ) )
+    {
+        if ( fs::is_directory( jobs_dir ) )
+        {
+            return;
+        }
+        std::ostringstream os;
+        os << "The jobs directory '" << jobs_dir
+           << "' exists and is not a directory";
+        throw std::runtime_error( os.str( ) );
+    }
+    std::cout << "The jobs directory does not exist, attempting to create '"
+              << jobs_dir << "'" << std::endl;
+    fs::create_directories( jobs_dir );
 }
 
 int
 main( int argc, char* argv[] )
 {
-    programname = Nds::basename( argv[ 0 ] );
-    openlog( programname.c_str( ), LOG_PID | LOG_CONS, LOG_USER );
-    int optind = parse_args( argc, argv );
-    if ( argc != optind + 1 )
-        usage( 1 );
+    auto opts = parse_args( argc, argv );
+    if ( opts.exit )
+    {
+        return 1;
+    }
 
-    boost::filesystem::path socket_path( argv[ optind ] );
-    auto                    working_dir = socket_path.parent_path( );
-    chdir( working_dir.c_str( ) );
-    Nds nds( argv[ optind ] );
+    std::string programname = Nds::basename( argv[ 0 ] );
+    setup_logging( programname, opts );
+
+    std::string socket_path = opts.socket_path( ).string( );
+    std::cout << "NDS server starting\nJobs Dir = " << opts.input_dir;
+    std::cout << "\nSocket path = " << socket_path << std::endl;
+
+    fs::current_path( opts.input_dir );
+    ensure_jobs_dir( opts );
+
+    Nds nds( socket_path );
     int res = nds.run( );
     return res;
 }
