@@ -17,9 +17,15 @@ Changes for 4.0  (NOT YET RELEASED)
 - Implemented a standalone_edc.
    - An edcu as a regular program, not a non-rt model.
    - Can record data into multiple types (short, int, float, double)
-- Implemented fix for FRX 13791
+- Implemented fix for FRS 13791
    - Increase the number of connections allowed on a daqd circular buffer past 32.
    - Generalize the data structure to allow changing the max number easier.  Currently set to 128.
+- Updated the nds process
+   - working dir defaults to /var/run/nds
+   - the name of the socket has changed from pipe to daqd_socket
+   - the command line is changed to specifying the working dir instead of the pipe/socket filename
+   - ie nds --socketdir /var/run/nds
+     - gives a jobs dir of /var/run/nds/jobs and a socket at /var/run/nds/daqd_socket
 ==================================================================================================
 Changes for 3.6  (NOT YET RELEASED)
 ==================================================================================================
